tp_lprog/src/us1004Parser.java
// Generated from C:/Users/Hugo/Documents/tp_lprog2021/tp_lprog\u005Cus1004.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class us1004Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, CATALOGOERRO=2, SERROCOMUNICACAO=3, SERROEQUIPAMENTO=4, SERROAPLICACAO=5, 
		CATALOGOFINANCA=6, SVENDA=7, SDESCONTO=8, CATALOGORH=9, CATALOGODADOS=10, 
		SNIB=11, SRESIDENCIA=12, SESTADOCIVIL=13, SHABILITACOESLITERARIAS=14, 
		CATALOGOFERIAS=15, SFERIAS=16, SFALTAPASSADA=17, SFALTAFUTURA=18, NIB=19, 
		IMAGEM=20, INTEIRO=21, PALAVRA=22, SEP=23, NL=24, WS=25;
	public static final int
		RULE_regra = 0, RULE_catalogo = 1, RULE_catalogoErro = 2, RULE_sErroEquipamento = 3, 
		RULE_sErroComunicacao = 4, RULE_sErroAplicacao = 5, RULE_anexoAnomalia = 6, 
		RULE_catalogoFinancas = 7, RULE_sVenda = 8, RULE_sDesconto = 9, RULE_catalogoRh = 10, 
		RULE_catalogoDados = 11, RULE_sNIB = 12, RULE_sResidencia = 13, RULE_sEstadoCivil = 14, 
		RULE_sHabilitacoesLiterarias = 15, RULE_catalogoFerias = 16, RULE_sFerias = 17, 
		RULE_sFaltaPassada = 18, RULE_sFaltaFutura = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"regra", "catalogo", "catalogoErro", "sErroEquipamento", "sErroComunicacao", 
			"sErroAplicacao", "anexoAnomalia", "catalogoFinancas", "sVenda", "sDesconto", 
			"catalogoRh", "catalogoDados", "sNIB", "sResidencia", "sEstadoCivil", 
			"sHabilitacoesLiterarias", "catalogoFerias", "sFerias", "sFaltaPassada", 
			"sFaltaFutura"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'Reportar Erro/Falha'", "'Reportar anomalia de comunicacao'", 
			"'Anomalia de equipamento'", "'Reportar anomalia em aplicacao'", "'Cotacoes e Descontos'", 
			"'Requerer cotacao para venda por grosso'", "'sDesconto'", "'Pedidos aos Recursos Humanos'", 
			"'Alteracao de Dados Pessoais'", "'Alteracao de NIB'", "'Alteracao de Residencias'", 
			"'Alteracao de Estado Civil para efeitos de IRS'", "'Alteracao de Habilitacoes Literarias'", 
			"'Ferias e Justificacoes'", "'Marcar Ferias'", "'Justificar falta ocorrida'", 
			"'Informar ausencia futura'", null, null, null, null, "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "CATALOGOERRO", "SERROCOMUNICACAO", "SERROEQUIPAMENTO", "SERROAPLICACAO", 
			"CATALOGOFINANCA", "SVENDA", "SDESCONTO", "CATALOGORH", "CATALOGODADOS", 
			"SNIB", "SRESIDENCIA", "SESTADOCIVIL", "SHABILITACOESLITERARIAS", "CATALOGOFERIAS", 
			"SFERIAS", "SFALTAPASSADA", "SFALTAFUTURA", "NIB", "IMAGEM", "INTEIRO", 
			"PALAVRA", "SEP", "NL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "us1004.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public us1004Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RegraContext extends ParserRuleContext {
		public RegraContext regra() {
			return getRuleContext(RegraContext.class,0);
		}
		public CatalogoContext catalogo() {
			return getRuleContext(CatalogoContext.class,0);
		}
		public TerminalNode NL() { return getToken(us1004Parser.NL, 0); }
		public RegraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regra; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterRegra(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitRegra(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitRegra(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegraContext regra() throws RecognitionException {
		return regra(0);
	}

	private RegraContext regra(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RegraContext _localctx = new RegraContext(_ctx, _parentState);
		RegraContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_regra, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(47);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new RegraContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_regra);
					setState(41);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(42);
					catalogo();
					setState(43);
					match(NL);
					}
					} 
				}
				setState(49);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CatalogoContext extends ParserRuleContext {
		public CatalogoErroContext catalogoErro() {
			return getRuleContext(CatalogoErroContext.class,0);
		}
		public CatalogoFinancasContext catalogoFinancas() {
			return getRuleContext(CatalogoFinancasContext.class,0);
		}
		public CatalogoRhContext catalogoRh() {
			return getRuleContext(CatalogoRhContext.class,0);
		}
		public CatalogoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_catalogo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterCatalogo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitCatalogo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitCatalogo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CatalogoContext catalogo() throws RecognitionException {
		CatalogoContext _localctx = new CatalogoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_catalogo);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CATALOGOERRO:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				catalogoErro();
				}
				break;
			case CATALOGOFINANCA:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				catalogoFinancas();
				}
				break;
			case CATALOGORH:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				catalogoRh();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CatalogoErroContext extends ParserRuleContext {
		public TerminalNode CATALOGOERRO() { return getToken(us1004Parser.CATALOGOERRO, 0); }
		public List<TerminalNode> NL() { return getTokens(us1004Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(us1004Parser.NL, i);
		}
		public TerminalNode SERROCOMUNICACAO() { return getToken(us1004Parser.SERROCOMUNICACAO, 0); }
		public SErroComunicacaoContext sErroComunicacao() {
			return getRuleContext(SErroComunicacaoContext.class,0);
		}
		public TerminalNode SERROEQUIPAMENTO() { return getToken(us1004Parser.SERROEQUIPAMENTO, 0); }
		public SErroEquipamentoContext sErroEquipamento() {
			return getRuleContext(SErroEquipamentoContext.class,0);
		}
		public TerminalNode SERROAPLICACAO() { return getToken(us1004Parser.SERROAPLICACAO, 0); }
		public SErroAplicacaoContext sErroAplicacao() {
			return getRuleContext(SErroAplicacaoContext.class,0);
		}
		public CatalogoErroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_catalogoErro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterCatalogoErro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitCatalogoErro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitCatalogoErro(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CatalogoErroContext catalogoErro() throws RecognitionException {
		CatalogoErroContext _localctx = new CatalogoErroContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_catalogoErro);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				match(CATALOGOERRO);
				setState(56);
				match(NL);
				setState(57);
				match(SERROCOMUNICACAO);
				setState(58);
				match(NL);
				setState(59);
				sErroComunicacao();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(CATALOGOERRO);
				setState(61);
				match(NL);
				setState(62);
				match(SERROEQUIPAMENTO);
				setState(63);
				match(NL);
				setState(64);
				sErroEquipamento();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				match(CATALOGOERRO);
				setState(66);
				match(NL);
				setState(67);
				match(SERROAPLICACAO);
				setState(68);
				match(NL);
				setState(69);
				sErroAplicacao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SErroEquipamentoContext extends ParserRuleContext {
		public SErroEquipamentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sErroEquipamento; }
	 
		public SErroEquipamentoContext() { }
		public void copyFrom(SErroEquipamentoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FaltaNumEquipamentoContext extends SErroEquipamentoContext {
		public List<TerminalNode> PALAVRA() { return getTokens(us1004Parser.PALAVRA); }
		public TerminalNode PALAVRA(int i) {
			return getToken(us1004Parser.PALAVRA, i);
		}
		public List<TerminalNode> SEP() { return getTokens(us1004Parser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(us1004Parser.SEP, i);
		}
		public FaltaNumEquipamentoContext(SErroEquipamentoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterFaltaNumEquipamento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitFaltaNumEquipamento(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitFaltaNumEquipamento(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValidoEquipAnomaliaContext extends SErroEquipamentoContext {
		public List<TerminalNode> PALAVRA() { return getTokens(us1004Parser.PALAVRA); }
		public TerminalNode PALAVRA(int i) {
			return getToken(us1004Parser.PALAVRA, i);
		}
		public List<TerminalNode> SEP() { return getTokens(us1004Parser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(us1004Parser.SEP, i);
		}
		public TerminalNode INTEIRO() { return getToken(us1004Parser.INTEIRO, 0); }
		public AnexoAnomaliaContext anexoAnomalia() {
			return getRuleContext(AnexoAnomaliaContext.class,0);
		}
		public ValidoEquipAnomaliaContext(SErroEquipamentoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterValidoEquipAnomalia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitValidoEquipAnomalia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitValidoEquipAnomalia(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValidoEquipContext extends SErroEquipamentoContext {
		public List<TerminalNode> PALAVRA() { return getTokens(us1004Parser.PALAVRA); }
		public TerminalNode PALAVRA(int i) {
			return getToken(us1004Parser.PALAVRA, i);
		}
		public List<TerminalNode> SEP() { return getTokens(us1004Parser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(us1004Parser.SEP, i);
		}
		public TerminalNode INTEIRO() { return getToken(us1004Parser.INTEIRO, 0); }
		public ValidoEquipContext(SErroEquipamentoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterValidoEquip(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitValidoEquip(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitValidoEquip(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FaltaTipoAnomaliaContext extends SErroEquipamentoContext {
		public List<TerminalNode> PALAVRA() { return getTokens(us1004Parser.PALAVRA); }
		public TerminalNode PALAVRA(int i) {
			return getToken(us1004Parser.PALAVRA, i);
		}
		public List<TerminalNode> SEP() { return getTokens(us1004Parser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(us1004Parser.SEP, i);
		}
		public TerminalNode INTEIRO() { return getToken(us1004Parser.INTEIRO, 0); }
		public FaltaTipoAnomaliaContext(SErroEquipamentoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterFaltaTipoAnomalia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitFaltaTipoAnomalia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitFaltaTipoAnomalia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SErroEquipamentoContext sErroEquipamento() throws RecognitionException {
		SErroEquipamentoContext _localctx = new SErroEquipamentoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sErroEquipamento);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new ValidoEquipAnomaliaContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(PALAVRA);
				setState(73);
				match(SEP);
				setState(74);
				match(PALAVRA);
				setState(75);
				match(SEP);
				setState(76);
				match(INTEIRO);
				setState(77);
				match(SEP);
				setState(78);
				match(PALAVRA);
				setState(79);
				match(SEP);
				setState(80);
				anexoAnomalia(0);
				}
				break;
			case 2:
				_localctx = new ValidoEquipContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				match(PALAVRA);
				setState(82);
				match(SEP);
				setState(83);
				match(PALAVRA);
				setState(84);
				match(SEP);
				setState(85);
				match(INTEIRO);
				setState(86);
				match(SEP);
				setState(87);
				match(PALAVRA);
				}
				break;
			case 3:
				_localctx = new FaltaTipoAnomaliaContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				match(PALAVRA);
				setState(89);
				match(SEP);
				setState(90);
				match(INTEIRO);
				setState(91);
				match(SEP);
				setState(92);
				match(PALAVRA);
				}
				break;
			case 4:
				_localctx = new FaltaNumEquipamentoContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				match(PALAVRA);
				setState(94);
				match(SEP);
				setState(95);
				match(PALAVRA);
				setState(96);
				match(SEP);
				setState(97);
				match(PALAVRA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SErroComunicacaoContext extends ParserRuleContext {
		public SErroComunicacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sErroComunicacao; }
	 
		public SErroComunicacaoContext() { }
		public void copyFrom(SErroComunicacaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InvalidoErroComunicacaoContext extends SErroComunicacaoContext {
		public TerminalNode PALAVRA() { return getToken(us1004Parser.PALAVRA, 0); }
		public InvalidoErroComunicacaoContext(SErroComunicacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterInvalidoErroComunicacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitInvalidoErroComunicacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitInvalidoErroComunicacao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValidoErroComunicacaoContext extends SErroComunicacaoContext {
		public List<TerminalNode> PALAVRA() { return getTokens(us1004Parser.PALAVRA); }
		public TerminalNode PALAVRA(int i) {
			return getToken(us1004Parser.PALAVRA, i);
		}
		public TerminalNode SEP() { return getToken(us1004Parser.SEP, 0); }
		public ValidoErroComunicacaoContext(SErroComunicacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterValidoErroComunicacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitValidoErroComunicacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitValidoErroComunicacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SErroComunicacaoContext sErroComunicacao() throws RecognitionException {
		SErroComunicacaoContext _localctx = new SErroComunicacaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sErroComunicacao);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new ValidoErroComunicacaoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(PALAVRA);
				setState(101);
				match(SEP);
				setState(102);
				match(PALAVRA);
				}
				break;
			case 2:
				_localctx = new InvalidoErroComunicacaoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				match(PALAVRA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SErroAplicacaoContext extends ParserRuleContext {
		public SErroAplicacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sErroAplicacao; }
	 
		public SErroAplicacaoContext() { }
		public void copyFrom(SErroAplicacaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ValidoErroAplicacaoContext extends SErroAplicacaoContext {
		public List<TerminalNode> PALAVRA() { return getTokens(us1004Parser.PALAVRA); }
		public TerminalNode PALAVRA(int i) {
			return getToken(us1004Parser.PALAVRA, i);
		}
		public TerminalNode SEP() { return getToken(us1004Parser.SEP, 0); }
		public ValidoErroAplicacaoContext(SErroAplicacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterValidoErroAplicacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitValidoErroAplicacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitValidoErroAplicacao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InvalidoErroAplicacaoContext extends SErroAplicacaoContext {
		public TerminalNode PALAVRA() { return getToken(us1004Parser.PALAVRA, 0); }
		public InvalidoErroAplicacaoContext(SErroAplicacaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterInvalidoErroAplicacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitInvalidoErroAplicacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitInvalidoErroAplicacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SErroAplicacaoContext sErroAplicacao() throws RecognitionException {
		SErroAplicacaoContext _localctx = new SErroAplicacaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sErroAplicacao);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new ValidoErroAplicacaoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(PALAVRA);
				setState(107);
				match(SEP);
				setState(108);
				match(PALAVRA);
				}
				break;
			case 2:
				_localctx = new InvalidoErroAplicacaoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(PALAVRA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnexoAnomaliaContext extends ParserRuleContext {
		public TerminalNode IMAGEM() { return getToken(us1004Parser.IMAGEM, 0); }
		public AnexoAnomaliaContext anexoAnomalia() {
			return getRuleContext(AnexoAnomaliaContext.class,0);
		}
		public AnexoAnomaliaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anexoAnomalia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).enterAnexoAnomalia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof us1004Listener ) ((us1004Listener)listener).exitAnexoAnomalia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof us1004Visitor ) return ((us1004Visitor<? extends T>)visitor).visitAnexoAnomalia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnexoAnomaliaContext anexoAnomalia() throws RecognitionException {
		return anexoAnomalia(0);
	}
